syntax = "proto3";

option go_package = "./proto";

message CreateTicketRequest {
    string title = 1;
    string description = 2;
}

message CreateTicketResponse {
    optional Values values = 1;
    optional Errors errors = 2;
    optional string redirect_url = 3;
}

message Values {
    string title = 1;
    string description = 2;
}

message Errors {
    string title = 1;
    string description = 2;
}

message GetTicketRequest {
    string encodedUrl = 1;
}

message GetTicketResponse {
    string title = 1;
    string description = 2;
    string date = 3;
    string short_url = 4;
}

service TicketService {
  rpc CreateTicket(CreateTicketRequest) returns (CreateTicketResponse) {};
  rpc GetTicket(GetTicketRequest) returns (GetTicketResponse) {};
}